separate provider into seal and sign

--- a/cookbook.properties.template
+++ b/cookbook.properties.template
@@ -2,9 +2,8 @@ url=https://api.your-datasign.test/
 keycloak.issuerUri=https://your-keycloak/realms/your-realm
 keycloak.clientId=your-client-id
 keycloak.clientSecret=your client secret
-#example.provider=BV
-#example.provider=DTRUST
-example.provider=
+example.signProvider=
+example.sealProvider=
 example.userId=
 example.sealId=
 example.timestampProvider=
