add new provider a-trust

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,10 @@
             <artifactId>dss-utils-google-guava</artifactId>
         </dependency>
         <dependency>
+            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+            <artifactId>dss-crl-parser-stream</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
