support signing and sealing with stored keys

--- a/cookbook.properties.template
+++ b/cookbook.properties.template
@@ -5,6 +5,7 @@ keycloak.clientSecret=your client secret
 example.signProvider=
 example.sealProvider=
 example.userId=
+example.certificateId=
 example.sealId=
 example.timestampProvider=
 example.signatureAlgorithm=
